less/overrides.less
/* ... */
.debugcontainer .blackdg .ace_wrapper {
    background: darken(@background, 3%);
    box-shadow: @textbox-box-shadow;
}

.debugcontainer .blackdg .ace_tree-editor {
    background: darken(@background, 3%);
    color: @color;
}


/* Color for debug panels end */

.cbblack.cbcontainerChecked .checkbox:before,
.listBP .checked .checkbox:before {
    content: "\f03a";
    color: #6CC788;
    font-size: 13px;
    line-height: 17px;
    font-weight: bold;
}

.panel-bar.debugcontainer .listBP .checked .checkbox:before {
    margin-left: 3px;
}

.checkbox {
    width: 17px;
    text-align: center;
}

.detail-tree .filetree.ace_tree,
.frame.absframe>.body {
    background: darken(@background, 1%);
    border-bottom: 1px solid darken(@background, 2%);
    border-top: 1px solid darken(@background, 2%);
}

.difftoolbar {
    background: transparent !important;
    box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.2);
    -webkit-box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.2);
    z-index: 100;
    top: 4px !important;
}

.ace_diff.insert.inline:after {
    background-color: rgba(108, 199, 136, 0.4) !important;
}

.ace_diff.delete.inline:after {
    background-color: rgba(247, 122, 153, 0.4) !important;
}

.listBP .checkbox {
    background-color: transparent !important;
}

.bar-preferences > div {
    font-size: 12px;
    line-height: 20px;
}

.c9-toolbarbutton-glossy {
    cursor: pointer;
}

.ace_line {
    -webkit-font-smoothing: subpixel-antialiased;
    font-smoothing: subpixel-antialiased;
}

.bar-status > .label {
    color: #fff !important;
    background: transparent;
    font-weight: normal;
}


/* Plugin prefs searchbox */

.prefpanel .searchbox.tb_console .sbtb_middle {
    opacity: 0.5;
    min-height: 22px;
}

.searchbox.tb_console .sbtb_middle {
    min-height: 20px;
    padding: 4px 25px 3px 5px !important;
}

.searchTxt.tb_console.dark .sbtb_middle {
    background-color: lighten(@background, 10%);
    border-color: lighten(@background, 10%) !important;
    box-shadow: none;
}

.filetree.ace_tree {
    font-size: 12px;
}

.filetree .tree-row {
    line-height: @tree-row-height;
}

.filetree .tree-row,
.tree-row > .caption {
    color: @base;
}

.filetree .tree-row.selected,
.filetree .tree-row.selected > .caption,
.tree-row.selected > .filetree-icon {
    color: @color;
}

.filetree .tree-row.selected > .caption {}

.filetree .tree-row.selected,
.filetree .tree-row.selected.hover {
    background-color: @selected-background !important;
}

.filetree > .ace_scrollbar-v {
    border-right: 0px solid #111 !important;
}

.filetree > .ace_scrollbar-inner {
    border-top: 0px solid #111;
}

.c9-menu-bar .c9-mbar-cont {
    border-bottom: 0 !important;
    z-index: 350000;
}

.c9-menu-btn {
    color: @compliment1 !important;
    line-height: 42px;
}

.c9-menu-btnDown,
.c9-menu-btnOver {
    background-color: @background !important;
    color: @compliment1;
    border-color: @background;
}

.c9-toolbarbutton-glossy {
    color: @compliment1 !important;
}

.panel-bar {
    border-right: 0px solid desaturate(@background, 16%);
    background: @background;
}

.editor_tab .btnsesssioncontainer {
    border: 0px;
    box-shadow: none;
    left: 0;
    right: 0;
    top: 0;
}



.session_btn.curbtn {
    background: transparent;
    background-color: transparent;
    border: 1px solid lighten(@background, 20%);
    border-bottom: 1px solid transparent;
    border-top: none;
    height: @pane-button-height;
}

.session_btn.curbtn .tab_middle,
.session_btn.curbtn .tab_middle::after,
.session_btn.curbtn .tab_middle::before {
    background: none !important;
    border-bottom-color: none;
}

.session_btn.focus {
    margin-top: none !important;
    padding-top: none !important;
    height: 38px !important;
    min-width: 9vw;
}

.has_apf .session_btn strong {
    margin-top: -1px !important;
}

.bar-preferences .blackdg .selected,
.bar-preferences .blackdgDisabled .selected {
    color: #fff;
}

.bar-preferences .btn-default-css3 {
    font-size: 0.9vw;
    ;
}


/* Expand tab titles to increase reability */

.session_btn.curbtn.dark.running {
    background: @pane-background;
}

.session_btn.over:not(.focus) {
    color: lighten(@color,10%);
}

.focus.session_btn.curbtn .sessiontab_title {
    font-weight: 300;
    color: #B7BCC5 !important;
    .font-smoothing(false);
}

.c9-menu-btn.preferences .icon {
    background: none;
}

.c9-menu-btn.preferences .icon:after {
    content: "\e905";
    font-family: c9;
    font-size: 22px;
    line-height: 26px;
    padding-left: 7px;
}

.dark.session_btn.curbtn .sessiontab_title {
    color: @compliment1 !important;
    margin-top: -1px;
}

.sessiontab_title {
    color: @compliment1 !important;
    margin-top: -1px;
}

.session_btn.curbtn:before {
    display: none;
}

.session_btn.curbtn:after {
    display: none;
}

.dark.session_btn.curbtn .tab_middle,
.session_btn .tab_middle,
.session_btn .tab_shadow {
    background-image: none;
    margin-top: 3px;
}

.session_btn {
    border-left: 0px solid #1d1d1d;
    border-right: 0px solid #1d1d1d;
    border-top: 0px solid #1d1d1d;
    border-bottom: 0px solid #1d1d1d;
    margin-top: none !important;
    padding-top: none !important;
    transition: min-width 0.2s, background-color 0.2s;
    -webkit-transition: min-width 0.2s, background-color 0.2s;
    /* Safari */
}

.dark.session_btn.curbtn .tab_middle,
.session_btn.curbtn .tab_middle,
.dark.session_btn .tab_middle,
.session_btn .tab_middle {
    line-height: 34px;
    padding-top: 0px;
}

.session_btn .tab_middle:before,
.session_btn .tab_middle:after {
    -webkit-mask: none !important;
    mask: none !important;
    display: none;
}

.session_btn .sessiontab_title {
    padding: 0px;
}

.focus.session_btn.curbtn .sessiontab_title {
    letter-spacing: 0px !important;
}

.editor_tab .btnsesssioncontainer .inside {
    padding: 0px 6px 0 34px;
    height: 38px;
}

.session_btn .tab_shadow {
    display: none;
}
/* ... */

